--- a/anvesh.yaml
+++ b/anvesh.yaml
@@ -1,12 +1,12 @@
 ---
 - name: Managing files and directories on Ubuntu systems
-  hosts: nginx_server
+  hosts: remote_server
   become: yes
 
   tasks:
     - name: Create a file 
       ansible.builtin.file:
-        path: /opt/anvesh.txt
+        path: /opt/file.cong
         state: touch
         owner: root
         group: root
@@ -37,25 +37,8 @@
         path: /opt/test
         state: absent
 
-    - name: change the content
-      ansible.builtin.lineinfile:
-        path: /etc/ssh/
-        search_string: '127.0.0.1'
-        #regexp: '^127\.0\.0\.1'
-        line: 127.0.0.1 localhost
-        owner: root
-        group: root
+   
 
-    - name: Gitcheckout
-      ansible.builtin.git:
-        repo: #mention your git repo link enclosed within strings
-        dest: /opt/ #mention the directory name of git repo
-        version: branch
+   
     
-    - name: copy files from ansible to remote systems
-      ansible.builtin.copy:
-        src: /var/www/html/index.html
-        dest: /var/www/html/index.html
-        owner: root
-        group: root
-        mode: '0644'
+    
