--- a/role_MYSQL/tasks/main.yml
+++ b/role_MYSQL/tasks/main.yml
@@ -10,15 +10,14 @@
        name: nginx
        state: started    
 
-    # - name: copy file from controller to remote 
-    #   copy:
-    #     src: "{{src}}"
-    #     dest: "{{dest}}"
-    #     owner: root
-    #     group: root
-    #     mode: 0644
+    - name: copy file from controller to remote 
+      copy:
+        src: /opt/file.conf
+        dest: /etc/file.conf
+        owner: root
+        group: root
+        mode: 0644
     - name: copy file from git to remote
       ansible.builtin.git:
-       repo: "{{git}}"
-       dest: "{{destination}}"
- 
+       repo: 'https://github.com/ankit20000/DevOpsSRE-PROJECT.git'
+       dest: /opt/DevOpsSRE-PROJECT
