--- a/roles/vars/main.yml
+++ b/roles/vars/main.yml
@@ -1,2 +1,6 @@
 ---
 # vars file for role_name
+git: https://github.com/ankit20000/DevOpsSRE-PROJECT.git
+destination: /opt/DevOpsSRE-PROJECT
+# scr: /opt/file.conf
+# dest: /etc/file.conf
