--- a/roles/vars/main.yml
+++ b/roles/vars/main.yml
@@ -3,4 +3,4 @@
 git: https://github.com/ankit20000/DevOpsSRE-PROJECT.git
 destination: /opt/DevOpsSRE-PROJECT
 # scr: /opt/file.conf
-# dest: /etc/file.conf
+dest: /opt/file.config
