--- a/roles/vars/main.yml
+++ b/roles/vars/main.yml
@@ -4,3 +4,5 @@ git: https://github.com/ankit20000/DevOpsSRE-PROJECT.git
 destination: /opt/DevOpsSRE-PROJECT
 # scr: /opt/file.conf
 dest: /opt/file.config
+server_name: remote_server
+document_root: root_doc
