--- a/roles/tasks/main.yml
+++ b/roles/tasks/main.yml
@@ -24,7 +24,7 @@
         mode: 0644
     - name: copy file from controller to remote  using template
       copy:
-        src: templates\html.index.j2
+        src: templates/html.index.j2
         dest: "{{dest1}}"
         owner: root
         group: root
