--- a/roles/vars/main.yml
+++ b/roles/vars/main.yml
@@ -5,5 +5,5 @@ destination: /opt/DevOpsSRE-PROJECT
 # scr: /opt/file.conf
 dest: /opt/file.config
 dest1: /opt/html.index
-# server_name: remote_server
-# document_root: root_doc
+server_name: "remote_server"
+document_root: "root_doc"
