--- a/roles/tasks/main.yml
+++ b/roles/tasks/main.yml
@@ -26,7 +26,7 @@
       # vars:
       #  server_name: remote_server
       #  document_root: root_doc 
-      copy:
+      template:
         src: templates/html.index.j2
         dest: "{{dest1}}"
         owner: root
