added mysql role

--- a/mysql_role/tasks/main.yml
+++ b/mysql_role/tasks/main.yml
@@ -20,10 +20,10 @@
        state: present
        
 
-    - name: install MYSQL
-      apt:
-       name: mysql
-       state: present
+    # - name: install MYSQL
+    #   apt:
+    #    name: mysql
+    #    state: present
 
    
        
