modified  docker file

--- a/docker.yaml
+++ b/docker.yaml
@@ -5,8 +5,8 @@
 
   tasks:
     - name: Update apt package cache
-      shell: sudo apt update -y
-
+      shell: sudo apt-get update
+      
     - name: Install required packages
       apt:
         name:
